add build script and start using browerify

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>Game of Pong on Darlingjs javascript game engine</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
+  <!-- build:css styles/game.css -->
+  <link rel="stylesheet" type="text/css" media="screen" href="css/game.css">
+  <!-- /build -->
 
-  <link rel="shortcut icon" href="../../images/logo-oldschool.ico">
+  <link rel="shortcut icon" href="images/logo-oldschool.ico">
   <meta name="description" content="Darlingjs : Entity, Component, System based javascript game engine. With dependency injections and modular architecture. Inspired by Ash, AngularJS and CraftyJS." />
   <link rel="image_src" href="https://lh3.googleusercontent.com/-YZQ1zxthtT8/UfUi-b1UQtI/AAAAAAAAfpQ/NLrs7v0y4do/s0/2013-07-28_15-56-08.png" />
   <meta property="og:image" content="https://lh5.googleusercontent.com/-80qp7uh3EZM/UfUXEVNq6TI/AAAAAAAAfoo/twveW1uDI2A/s0/2013-07-28_15-05-19.png" />
@@ -20,6 +22,7 @@
     </div>
   </div>
 
+  <!-- build:js js/game.js -->
   <script src="bower_components/darlingjs/darling.js"></script>
   <script src="bower_components/darlingjs-geometry/flatland.js"></script>
 
@@ -28,5 +31,6 @@
   <script src="js/physics.js"></script>
   <script src="js/gameplay.js"></script>
   <script src="js/game.js"></script>
+  <!-- /build -->
 </body>
 </html>
