--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
 </head>
-<body style="overflow: hidden">
+<body>
   <div id="gameStage" class="game">
     <div class="ui-elements">
       <div class="scores score-left">Player1:<span id="playerScore1"></span></div>
